--- a/src/app/components/mariano/bat/bat.module.css
+++ b/src/app/components/mariano/bat/bat.module.css
@@ -1,4 +1,13 @@
 .bat {
   position: relative;
-  z-index: 100;
+}
+
+.hittingImg {
+  animation: hitting 0.4s ease-in-out; 
+}
+
+@keyframes hitting {
+  0% { transform: rotate(0); }          
+  50% { transform: rotate(-20deg); }    
+  100% { transform: rotate(0); }        
 }
