--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,5 +5,6 @@
 body {
   background-color: rgb(43, 43, 43);
   overflow-x: hidden;
-
+}* {
+  outline: 1px solid red; /* Highlights all elements */
 }
