--- a/src/app/components/mariano/bat/bat.module.css
+++ b/src/app/components/mariano/bat/bat.module.css
@@ -1,5 +1,8 @@
 .bat {
-  position: relative;
+  position: absolute;
+  transform: scale(0.8) rotate(10deg);
+  top: -10px;
+  left: -30px;
 }
 
 .hittingImg {
@@ -7,7 +10,7 @@
 }
 
 @keyframes hitting {
-  0% { transform: rotate(0); }          
-  50% { transform: rotate(-20deg); }    
-  100% { transform: rotate(0); }        
+  0% { transform: rotate(0deg); }          
+  50% { transform: rotate(-10deg); }    
+  100% { transform: rotate(10deg); }        
 }
