--- a/src/app/components/minigame/Minigame.module.css
+++ b/src/app/components/minigame/Minigame.module.css
@@ -2,10 +2,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 10px;
   height: 300px;
-  margin-left: 50px;
 }
 
 .imgContainer {
   position: relative;
+  width: 250px;
+  height: 250px;
+  overflow: hidden;
 }
